# DNESP32S3-4.3-RGBLCD-2048

./: .gitignore  CMakeLists.txt  HANDOFF.md  README.md  partitions-16MiB.csv  sdkconfig  stations.json
components/BSP/: CMakeLists.txt
components/BSP/ES8388/: es8388.c  es8388.h
components/BSP/REMOTE/: remote_ir.c  remote_ir.h
components/BSP/RGBLCD/: lcd.c  lcd.h  rgblcd.c  rgblcd.h
components/BSP/SDIO/: spi_sdcard.c  spi_sdcard.h
components/BSP/SPI/: spi.c
components/BSP/TOUCH/: gt9xxx.c  touch.c  touch.h
components/BSP/XL9555/: xl9555.c
components/nofrendo/: CMakeLists.txt
components/nofrendo/mappers/: map020.c
docs/: CURRENT_FIRMWARE_FLASH.md  HANDOFF.md  PINOUT.md  RADIO.md  RADIO_HEADLESS_HANDOFF.md  RADIO_HEADLESS_TEST.md  ROADMAP.md
docs/guides/: DNESP32S3_刷机指南.md  tomato_weather_jwt_handoff.md
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
main/APP/: app_network.c  app_network.h  bird_launcher.c  bird_launcher.h  board_audio.c  board_audio.h  boot_ui.c  boot_ui.h  fc_emulator.c  fc_emulator.h  flip_clock.c  flip_clock.h  game2048.c  game2048.h  ir_remote.c  ir_remote.h  lvgl_demo.c  lvgl_demo.h  mastermind.c  mastermind.h  menu.c  menu.h  nes_emu.c  nes_emu.h  photoviewer.c  photoviewer.h  qweather_jwt_secret.example.h  racing_game.c  racing_game.h  radio_app.c  radio_app.h  radio_headless.c  radio_headless.c.bak  radio_headless.h  radio_headless.h.bak  radio_headless_test.c  radio_headless_test.h  radio_player.c  radio_player.h  radio_stations.c  (+13 more)
main/APP/fonts/: README.md
tools/: generate_qweather_jwt_secret.py
