idf_component_register(
    SRCS
        "main.c"
        "APP/boot_ui.c"
        "APP/bird_launcher.c"
        "APP/game2048.c"
        "APP/lvgl_demo.c"
        "APP/menu.c"
        "APP/photoviewer.c"
        "APP/racing_game.c"
        "APP/radio_headless_test.c"
        "APP/radio_stations.c"
        "APP/reaction_test.c"
        "APP/tjpgd.c"
        "APP/tomato_timer.c"
    INCLUDE_DIRS 
        "."
        "APP"
    REQUIRES
        BSP
        esp_wifi
        esp_event
        esp_netif
        esp_http_client
        esp_http_server
        esp-tls
        mbedtls
        nvs_flash
        esp_driver_i2s
        esp_driver_gpio
        esp_driver_i2c
        json
        lwip)
