idf_component_register(
    SRCS
        "main.c"
        "APP/app_network.c"
        "APP/board_audio.c"
        "APP/boot_ui.c"
        "APP/fc_emulator.c"
        "APP/game2048.c"
        "APP/lvgl_demo.c"
        "APP/mastermind.c"
        "APP/menu.c"
        "APP/nes_emu.c"
        "APP/photoviewer.c"
        "APP/flip_clock.c"
        "APP/radio_headless.c"
        "APP/radio_app.c"
        "APP/radio_player.c"
        "APP/radio_stations.c"
        "APP/reaction_test.c"
        "APP/tjpgd.c"
        "APP/tomato_timer.c"
        "APP/ui_fonts.c"
        "APP/ui_text.c"
        "APP/xiaozhi_headless.c"
    INCLUDE_DIRS
        "."
        "APP"
    REQUIRES
        BSP
        nofrendo
        esp_wifi
        esp_event
        esp_netif
        esp_http_client
        esp_http_server
        esp-tls
        esp_audio_codec
        mbedtls
        nvs_flash
        esp_driver_i2s
        esp_driver_gpio
        esp_driver_i2c
        json
        lwip
        esp_websocket_client)
